kubernetes/namespaces/base/kagent/httproute-xlistener.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-website-fetcher
  namespace: kagent
spec:
  parentRefs:
  - kind: Gateway
    group: gateway.networking.k8s.io
    name: shared-mcp-kgateway
    namespace: kgateway-system
    sectionName: mcp
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: mcp-website-fetcher
      namespace: kagent
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: "/"
